--- a/sysconfig/pom.xml
+++ b/sysconfig/pom.xml
@@ -13,6 +13,9 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <web.ui.directory>ui</web.ui.directory>
+        <web.server.inf.directory>web-server-inf</web.server.inf.directory>
+        <web.static.files.directory>resources</web.static.files.directory>
     </properties>
 
     <build>
@@ -25,22 +28,92 @@
                 <version>1.1.1</version>
                 <executions>
                     <execution>
-                        <id>Building Vue UI</id>
+                        <id>vue-ui</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
+                        <configuration>
+                            <executable>npm</executable>
+                            <arguments>
+                                <argument>--prefix</argument>
+                                <argument>${project.basedir}/${web.ui.directory}</argument>
+                                <argument>run</argument>
+                                <argument>build</argument>
+                            </arguments>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <executable>npm</executable>
-                    <arguments>
-                        <argument>--prefix</argument>
-                        <argument>${project.basedir}/ui</argument>
-                        <argument>run</argument>
-                        <argument>build</argument>
-                    </arguments>
-                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>create-web-inf</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <mkdir dir="${project.basedir}/${web.static.files.directory}/WEB-INF"/>
+                            </target>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>create-meta-inf</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <mkdir dir="${project.basedir}/${web.static.files.directory}/META-INF"/>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-web-inf</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.basedir}/${web.static.files.directory}/WEB-INF</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${web.server.inf.directory}/WEB-INF</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-meta-inf</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.basedir}/${web.static.files.directory}/META-INF</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${web.server.inf.directory}/META-INF</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
