--- a/sysconfig/pom.xml
+++ b/sysconfig/pom.xml
@@ -161,6 +161,17 @@
             <artifactId>zip4j</artifactId>
             <version>2.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
