--- a/sysconfig/ui/package.json
+++ b/sysconfig/ui/package.json
@@ -24,8 +24,11 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "typescript": "~4.5.5"
   }
 }
